--- a/project1/Makefile
+++ b/project1/Makefile
@@ -2,7 +2,7 @@ C       = g++
 LIB     =  -I/usr/csshare/pkgs/csim_cpp-19.0/lib
 CSIM    = /usr/csshare/pkgs/csim_cpp-19.0/lib/csim.cpp.a
 RM      = /bin/rm -f
-CFLAG   = -DCPP -DGPP
+CFLAG   = -DCPP -DGPP -g
  
 INPUT = RachelLawProject1.cpp
 TARGET = csim
